# StepFold

./: .gitignore  README  README.md  pyproject.toml
code/: data_generator.py  generate_mask_matrix.py  inference_fasta.py  network.py  test_all.py  train_S1.py  train_S2.py  train_S3.py  train_S4.py  utils.py
configs/: Architecture.json  S1.json  S2.json  S3.json  S4.json
inference_demo/: demo.fasta
inference_demo/output/seq1/: binary_contact_map.npy  prediction.bpseq  probability_matrix.npy  sequence.fasta  summary.json
inference_demo/output/seq2/: binary_contact_map.npy  probability_matrix.npy  sequence.fasta  summary.json
inference_demo/output/seq3/: binary_contact_map.npy  probability_matrix.npy  sequence.fasta  summary.json
