[project]
name = "stepfold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "gdown>=5.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.66.5",
    "wandb>=0.22.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
